src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active_Community_User__c</fullName>
        <formula>Portal_User__r.IsActive</formula>
        <label>Active Community User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable Resource?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <formula>AND(
  OR(
    Account.RecordType.Name == &apos;Direct Client&apos;,
    Account.RecordType.Name == &apos;Partner Client&apos;,
    Account.RecordType.Name == &apos;Partner Client &amp; Delivery Partner&apos;
  ),
  ISPICKVAL( Account.Services_Status__c , &apos;Active&apos;)
)</formula>
        <inlineHelpText>Indicates if the Contact&apos;s Account is a Client</inlineHelpText>
        <label>Client Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments_on_Independent_Freelancing__c</fullName>
        <label>Comments on Independent/Freelancing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_User_Profile__c</fullName>
        <formula>Portal_User__r.Profile.Name</formula>
        <label>Community User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Notes__c</fullName>
        <label>Contact Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <inlineHelpText>Use this field to make notes about Expert availability</inlineHelpText>
        <label>Contact Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Portal_User_Flag__c</fullName>
        <formula>AND( 
  NOT(ISBLANK(Portal_User__c)), 
  Portal_User__r.Id = $User.Id 
)</formula>
        <label>Current Portal User Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoubleClick_for_Salesforce_Client__c</fullName>
        <formula>OR(
  AND(
    NOT(ISBLANK(Portal_User__c)),
    CONTAINS(Portal_User__r.Profile.Name, &apos;Product&apos;),
    Portal_User__r.IsActive
  )
)</formula>
        <label>DoubleClick for Salesforce Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>SFDC App Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expert_Bio_Information__c</fullName>
        <description>can be either a link to a doc or brief description</description>
        <label>Expert Bio Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName + &apos; &apos; + LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Corporation__c</fullName>
        <label>LLC/Corporation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Achievement_Sync__c</fullName>
        <label>Last Achievement Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Length_of_time_Independent__c</fullName>
        <label>Length of time Independent</label>
        <picklist>
            <picklistValues>
                <fullName>0-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 or More</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lifetime_Points_Earned__c</fullName>
        <label>Lifetime Points Earned</label>
        <summarizedField>Points__c.Number_of_Points__c</summarizedField>
        <summaryForeignKey>Points__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lifetime_Points_Redeemed__c</fullName>
        <label>Lifetime Points Redeemed</label>
        <summarizedField>Order__c.Total_Points_Redeemed__c</summarizedField>
        <summaryForeignKey>Order__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Projects__c</fullName>
        <label>Number of Projects</label>
        <picklist>
            <picklistValues>
                <fullName>1-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 or More</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Old_Owner_Id__c</fullName>
        <label>Old Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_External_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The identifier for this Resource in our Partner&apos;s system of record</inlineHelpText>
        <label>Partner External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Portal_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuickBooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>QuickBooks Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <globalPicklist>Referral_Source</globalPicklist>
        <label>Referral Source</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_URL__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Referral_Code__c)),
  HYPERLINK(&quot;http://www.10kview.com/?rc=&quot; &amp; Referral_Code__c, &quot;http://www.10kview.com/?rc=&quot; &amp; Referral_Code__c),
  null
)</formula>
        <label>Referral URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Picklist__c</fullName>
        <globalPicklist>Region</globalPicklist>
        <label>Region</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <globalPicklist>Role</globalPicklist>
        <label>Role</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roles_Other__c</fullName>
        <label>Roles Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Work_Date__c</fullName>
        <label>Salesforce Work Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype_Id__c</fullName>
        <label>Skype Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strengths_Areas_of_Interest__c</fullName>
        <label>SFDC Skills &amp; Project Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Temporary_Gmail_Password__c</fullName>
        <label>Temporary Gmail Password</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trailhead_User_Id__c</fullName>
        <label>Trailhead User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_User_Name__c</fullName>
        <label>Twitter User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Created_From_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated/Created From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Virtually_Worked__c</fullName>
        <label>Virtually Worked</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webassessor_ContactId__c</fullName>
        <label>Webassessor Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webassessor_Email__c</fullName>
        <label>Webassessor Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Website_Blog__c</fullName>
        <label>Website/Blog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Willing_to_Setup_LLC_Corporation__c</fullName>
        <label>Willing to Setup LLC/Corporation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worked_with_Vendors__c</fullName>
        <label>Worked with Vendors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10K_Store_Points_Available__c</fullName>
        <formula>Lifetime_Points_Earned__c - Lifetime_Points_Redeemed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>10K Store Points Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Billable_Resources</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>Role__c</columns>
        <columns>Webassessor_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billable_Resource__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>10K,Trekbin,Concretio,iBirds,Briskminds</value>
        </filters>
        <label>Billable Resources</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delivery_Partner_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Role__c</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billable_Resource__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>10K,Trekbin,Briskminds,Concretio,iBirds</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>contains</operation>
        </filters>
        <label>Onshore Experts - Onboarded</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Contact</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Portal_User_Flag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Contact</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>